preventing overflow-x: hidden on page from hiding kifi pane

--- a/packrat/styles/keeper/pane.less
+++ b/packrat/styles/keeper/pane.less
@@ -46,6 +46,7 @@ html[kifi-pane-parent][kifi-with-pane]:not(.kifi-snapshot-mode) .kifi-pane {
   }
   html[kifi-pane-parent],
   html[kifi-pane-parent]>body {
+    overflow-x: visible;
     -webkit-transform: none; // crbug.com/66599
     transform: none;
   }
